--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             </div>
           </div>
           <div class="column">
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
               <div>
                 <small>BUG FIXES</small>
               </div>
@@ -89,9 +87,7 @@
                 </div>
               </div>
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
               <div>
                 <small>UX IMPROVEMENTS</small>
               </div>
@@ -110,17 +106,11 @@
                 </div>
               </div>
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white 2
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white 2
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white
             </div>
           </div>
         </div>
@@ -136,23 +126,14 @@
             </div>
           </div>
           <div class="column">
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white 1
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white 1
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white 2
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white 2
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white
             </div>
           </div>
         </div>
@@ -168,23 +149,14 @@
             </div>
           </div>
           <div class="column">
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white 1
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white 1
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white 2
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white 2
             </div>
-            <div
-              class="card border hover-border-double cursor-pointer rounded p-2 m-3 bg-white"
-            >
-              card border hover-border-double cursor-pointer rounded p-2 m-3
-              bg-white
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              card border cursor-pointer rounded p-2 m-3 bg-white
             </div>
           </div>
         </div>
@@ -197,7 +169,7 @@
       var sortable = sortables[i];
       var sortableInstance = new Sortable(sortable, {
         group: "shared",
-        animation: 150,
+        animation: 0,
         forceFallback: true,
         fallbackClass: "dragged-item",
         ghostClass: "ghost-class",
