Update fake data

--- a/index.html
+++ b/index.html
@@ -44,14 +44,21 @@
           <span>Green Initiatives</span>
         </div>
         <div class="bg-black rounded flex align-items-center p-1">
-          <img src="./public/icons/pyramid.svg" height="18" class="me-2" />
+          <img
+            src="./public/icons/pyramid-white.svg"
+            height="18"
+            class="me-2"
+          />
           <span>Active Development</span>
         </div>
       </div>
     </div>
     <div class="w-100">
       <div class="flex justify-content-between border-bottom p-3 px-4">
-        <span>Active Development</span>
+        <div class="flex align-items-center">
+          <img src="./public/icons/pyramid.svg" height="18" class="me-2" />
+          <span>Active Development</span>
+        </div>
         <div class="flex align-items-center">
           <span>Settings</span>
           <img src="./public/icons/down.svg" />
@@ -107,10 +114,21 @@
               </div>
             </div>
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white 2
-            </div>
-            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white
+              <div>
+                <small>CARDS</small>
+              </div>
+              <div class="my-2">Custom fields in cards</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>1</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>8</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -127,13 +145,38 @@
           </div>
           <div class="column">
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white 1
+              <div>
+                <small>ONBOARDING</small>
+              </div>
+              <div class="my-2">Improve signup flow</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
             </div>
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white 2
-            </div>
-            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white
+              <div>
+                <small>DOCUMENTS</small>
+              </div>
+              <div class="my-2">Add initial version of documents to app</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -150,13 +193,75 @@
           </div>
           <div class="column">
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white 1
+              <div>
+                <small>COLOUR</small>
+              </div>
+              <div class="my-2">Remove all colour from the app</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
             </div>
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white 2
+              <div>
+                <small>TAGS</small>
+              </div>
+              <div class="my-2">Follow up work on tags</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
             </div>
             <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
-              card border cursor-pointer rounded p-2 m-3 bg-white
+              <div>
+                <small>CARD DESCRIPTIONS</small>
+              </div>
+              <div class="my-2">
+                Improve editing features in card descriptions so text can be
+                richer than before
+              </div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
+            </div>
+            <div class="card border cursor-pointer rounded p-2 m-3 bg-white">
+              <div>
+                <small>COLOUR</small>
+              </div>
+              <div class="my-2">Found some more colour, so remove that too</div>
+              <div class="flex align-items-center">
+                <div class="circle me-2 bg-black"><small>AH</small></div>
+                <div class="flex align-items-center me-2">
+                  <img src="./public/icons/tag.svg" height="18" />
+                  <span>2</span>
+                </div>
+                <div class="flex align-items-center">
+                  <img src="./public/icons/comment.svg" height="18" />
+                  <span>4</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
