--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <title>Home</title>
-<link rel="stylesheet" href="./css/spacing.css" />
-<link rel="stylesheet" href="./css/style.css" />
-<script type="module" src="./js/entry.js"></script>
+<link rel="stylesheet" href="/css/spacing.css" />
+<link rel="stylesheet" href="/css/style.css" />
+<script type="module" src="/js/app.js"></script>
