--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
 <title>Home</title>
-<link rel="stylesheet" href="/css/spacing.css" />
-<link rel="stylesheet" href="/css/style.css" />
-<script type="module" src="/js/app.js"></script>
+<link rel="stylesheet" href="/spacing.css" />
+<link rel="stylesheet" href="/style.css" />
+<script type="module" src="/app.js"></script>
