--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
 <title>Home</title>
-<link rel="stylesheet" href="/spacing.css" />
-<link rel="stylesheet" href="/style.css" />
+<link rel="stylesheet" href="/app.css" />
 <script type="module" src="/app.js"></script>
